# positions-manager

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: test.yaml
proto/: positions_manager_grpc_service.proto
src/: lib.rs  main.rs  utils.rs
src/app/: app_context.rs  mod.rs
src/flows/: close_position.rs  mod.rs  open_position.rs
src/grpc/: mod.rs
src/grpc/grpc_server/: mappers.rs  mod.rs  position_manager_grpc_server.rs  server.rs
src/models/: bid_ask.rs  caches_implementations.rs  engine_error.rs  mod.rs  position.rs
