[package]
name = "positions-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
trading-sdk = { git = "https://github.com/my-cfd-platform/trading-sdk", tag = "0.1.1" }
# trading-sdk ={ path = "../trading-sdk" }
chrono = "*"
prost = "*"
prost-types = "*"
uuid = { version = "*", features = ["v4"] }
my-grpc-extensions = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
tokio = "*"
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
